[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connmanager"
version = "0.1.0"
description = "A connection manager for SSH, RDP, VNC, VMRC, and HTTP."
readme = "README.md"
authors = [
    { name="Shane Bebber", email="shanebebber@gmail.com" }
]
license = { file="LICENSE" }
requires-python = ">=3.6"
dependencies = [
    "cryptography"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/sugashane/connmanager"

[project.scripts]
cm = "connmanager.main:main"
