[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connmanager"
version = "0.1.0"
description = "A connection manager for SSH, RDP, VNC, VMRC, and HTTP."
readme = "README.md"
authors = [
    { name="Shane Bebber", email="shanebebber@gmail.com" }
]
license = "MIT"
requires-python = ">=3.6"
dependencies = [
    "cryptography"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/sugashane/connmanager"

[project.scripts]
cm = "connmanager.main:main"

[tool.setuptools.packages.find]
include = ["connmanager*"]
exclude = ["completions*"]
